@startuml

title __ANTL's Class Diagram__\n

  package com.avansprojects.antl {
    class AntlApp {
        {static} + shared_preference : AntlApp
        + onCreate()
        {static} + getContext()
    }
  }
  

  package com.avansprojects.antl {
    class StartActivity {
        ~ mBottomNav : BottomNavigationView
        # onCreate()
        - setupBottomBarNav()
    }
  }
  

  AntlApp -up-|> Application
  StartActivity -up-|> AppCompatActivity
  HostCallbacks -up-|> FragmentHostCallback


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
